#105093942 fixed blue hatched legend not showing in Firefox

--- a/eums/client/less/dashboard.less
+++ b/eums/client/less/dashboard.less
@@ -355,7 +355,7 @@ div[class*="-aggregate-marker-icon"] div {
 }
 
 .leaflet-clickable[fill=map-received-with-issues]{
-  fill: url(#map-hatch-pattern);
+  fill: url('/#map-hatch-pattern');
 }
 
 .leaflet-clickable.show-svg-border{
